# write_cpp_with_rust_syntax

./: CMakeLists.txt
examples/: CMakeLists.txt  enum.cpp  fn.cpp  for_in_loop.cpp  hello_world.cpp  infinite_loop.cpp  loop.cpp  option.cpp  panic.cpp  result.cpp  smart_ptr.cpp  struct.cpp  variable.cpp
include/: general.h  macros.h  option.h  preclude.h  result.h  smart_ptr.h  types.h
src/: CMakeLists.txt  macros.cpp  types.cpp
